// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the PassView component should display loading placeholders 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    isLoading={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "justifyContent": "space-between",
            "minHeight": 733.7,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 12,
                  "marginVertical": 3,
                  "width": "50%",
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#A5A5A5",
                    "borderRadius": 16,
                    "height": 12,
                    "marginVertical": 3,
                    "width": "50%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#A5A5A5",
                    "borderRadius": 16,
                    "height": 24,
                    "marginVertical": 1.8000000000000007,
                    "width": "100%",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#A5A5A5",
                    "borderRadius": 16,
                    "height": 12,
                    "marginVertical": 3,
                    "width": "50%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#A5A5A5",
                    "borderRadius": 16,
                    "height": 14,
                    "marginVertical": 3.5,
                    "width": "60%",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`the PassView component should render 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "salmon",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "justifyContent": "space-between",
            "minHeight": 733.7,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              color="rgb(248, 247, 244)"
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Bold",
                  "fontSize": 12,
                  "lineHeight": 18,
                  "textAlign": "center",
                }
              }
            >
              Apollos Church
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "textAlign": "left",
                  }
                }
                textAlignment="LEFT"
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(248, 247, 244)",
                      "fontFamily": "InterUI-Black",
                      "fontSize": 24,
                      "lineHeight": 27.6,
                    }
                  }
                >
                  Conrad VanLandingham
                </Text>
              </Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Image
                fadeDuration={250}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "https://res.cloudinary.com/apollos/image/fetch/c_limit,f_auto,w_1600/https://apollosrock.newspring.cc/GetImage.ashx%3Fguid%3Ddd2aa592-80ac-4d7a-8bdc-47aeb25ce158%26format%3Dpng%26height%3D200",
                    },
                  ]
                }
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "aspectRatio": 0.75,
                    "backgroundColor": "transparent",
                    "flex": 1,
                    "resizeMode": "cover",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "textAlign": "left",
                  }
                }
                textAlignment="LEFT"
              >
                <Text
                  style={
                    Object {
                      "color": "#505050",
                      "fontFamily": "InterUI-Bold",
                      "fontSize": 12,
                      "lineHeight": 18,
                    }
                  }
                >
                  home
                </Text>
              </Text>
              <Text
                style={
                  Object {
                    "textAlign": "left",
                  }
                }
                textAlignment="LEFT"
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(248, 247, 244)",
                      "fontFamily": "InterUI-Medium",
                      "fontSize": 14,
                      "lineHeight": 21,
                    }
                  }
                >
                  Richardson, TX
                </Text>
              </Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
                textAlignment="RIGHT"
              >
                <Text
                  style={
                    Object {
                      "color": "#505050",
                      "fontFamily": "InterUI-Bold",
                      "fontSize": 12,
                      "lineHeight": 18,
                    }
                  }
                >
                  campus
                </Text>
              </Text>
              <Text
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
                textAlignment="RIGHT"
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(248, 247, 244)",
                      "fontFamily": "InterUI-Medium",
                      "fontSize": 14,
                      "lineHeight": 21,
                    }
                  }
                >
                  Main Campus
                </Text>
              </Text>
            </View>
          </View>
        </View>
        <Image
          source={
            Object {
              "uri": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIQAAACECAYAAABRRIOnAAAAAklEQVR4AewaftIAAAN6SURBVO3BS45jRwADwWRB979yuhdecFXAg6QefxgRfzDzt8NMOcyUw0w5zJTDTDnMlMNMOcyUw0w5zJTDTDnMlMNMOcyUw0x58aYk/CaVmyQ0lSeS8ITKTRJ+k8o7DjPlMFMOM+XFh6l8UhKeULlJwicloancqHxSEj7pMFMOM+UwU158WRKeUHkiCTcqTaUl4UalJaGpvCMJT6h802GmHGbKYaa8+I9LQlO5UWlJ+D85zJTDTDnMlBf/MSotCS0JTeVGpSWhJaGp/JsdZsphphxmyosvU/lNSXgiCU3lRuWTVP5JDjPlMFMOM+XFhyXhT1JpSWgqLQk3SWgqLQlN5SYJ/2SHmXKYKYeZ8uJNKv9kKi0JTeWbVP5NDjPlMFMOMyX+4A1JaCotCZ+kcpOEG5XflIRPUvmmw0w5zJTDTIk/+KAkNJWbJDSVmyQ0lZskfJNKS0JTeSIJTeU3HWbKYaYcZkr8wRcl4UblJgk3Kk8k4ZtUWhKeULlJwo3KOw4z5TBTDjPlxYcl4R1JaCotCTdJuFG5SUJTuUnCjconqXzTYaYcZsphpsQf/KIk3Ki0JDSVT0pCU2lJeEKlJeE3qbzjMFMOM+UwU+IP3pCEd6i8IwlN5U9KQlN5IglN5TcdZsphphxmyosPU3lHEm5UmkpLwjtUbpLQVG6ScKPSVG6ScKPyjsNMOcyUw0x58WVJeIfKO1RaEprKTRJukvCOJDSVG5WWhE86zJTDTDnMlBdfptKS8EQSmkpLwjeptCR8UxJuVL7pMFMOM+UwU168SeUJlW9SaUloKi0JT6i0JDSVJ5LQVG6S0FQ+6TBTDjPlMFNevCkJv0mlqbQkNJUblZaET0pCU7lJQlNpKi0JTeUdh5lymCmHmfLiw1Q+KQk3SWgqLQlNpSXhRqUl4QmVT0pCU/mkw0w5zJTDTHnxZUl4QuWTVJ5QaUl4IgnvUGlJ+E2HmXKYKYeZ8uJ/TuVGpSXhRqUloam0JLQkNJWbJDSVdxxmymGmHGbKi/+4JDyhcqNyk4SmcqPSktCS0FS+6TBTDjPlMFNefJnKN6ncqLQkNJWbJDyh8kQSmsqfdJgph5lymCkvPiwJvykJ36TyjiTcqLQk/EmHmXKYKYeZEn8w87fDTDnMlMNMOcyUw0w5zJTDTDnMlMNMOcyUw0w5zJTDTDnMlMNM+QvFao35BOHtSwAAAABJRU5ErkJggg==",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "aspectRatio": 1,
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "marginBottom": 16,
              "resizeMode": "contain",
              "width": "50%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;
